EL-3666 - Added padding to prevent overlap with icons (#1206)
* Added padding to prevent overlap with icons

Added right padding to allow for the chevron, and dynamic additional padding when the clear button is present.

Added screenshot verification of overflow appearance, and also a new test case for the clear button.

Also consolidated two test cases with very similar functionality.

* Fixed select-forms test failures

--- a/src/components/select/select.component.less
+++ b/src/components/select/select.component.less
@@ -77,6 +77,14 @@ ux-dropdown {
                 }
             }
         }
+
+        > input {
+            padding-right: 31px;
+
+            &.ux-tag-input-clear-inset {
+                padding-right: 57px;
+            }
+        }
     }
 
     &.ux-select-disabled .ux-select-container .ux-select-icons {
